01-deployment-Cluster-IP.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techmax-deploy
  namespace: akash
spec:
  replicas: 4
  selector:
    matchLabels:
      app: techmax
  template:
    metadata:
      labels:
        app: techmax
    spec:
      containers:
      - name: techmax
        image: akash2147/web-techmax
        ports:
          - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name:  techmax-svc
  namespace: akash
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app:  techmax
  type:  ClusterIP
  ports:
  - name:  techmax
    port:  80
    targetPort:  80
